# url_shortner_app

./: .env  .gitignore  README.md  docker-compose.yml  pyproject.toml
app/: Dockerfile  config.py  database.py  main.py  routes.py  schemas.py  services.py
nginx/: nginx.conf
